--- a/AtkTennisWeb/Views/AdminHome/Index.cshtml
+++ b/AtkTennisWeb/Views/AdminHome/Index.cshtml
@@ -200,7 +200,7 @@
 
                                 </div>
 
-                             
+
                                 <div style="margin-top:8px">
                                     <nav aria-label="Page navigation example">
                                         <ul class="pagination">
@@ -451,7 +451,7 @@
                                 </tbody>
                             </table>
 
-                            <div  class="pull-left d-flex justify-content-between" style="font-size: 16px; margin-top:10px">
+                            <div class="pull-left d-flex justify-content-between" style="font-size: 16px; margin-top:10px">
                                 <div style="margin-top:15px">
                                     <div>
 
@@ -465,8 +465,8 @@
                                     </div>
                                 </div>
 
-                                <div >
-                                    <a href="~/AdminHome/MultiReservations" type="button" class="btn btn-dark"><i style="margin-right:15px" class="fas fa-project-diagram"></i>Çoklu Rezervasyon Yap</a>
+                                <div>
+                                    <a href="~/AdminHome/MultiReservations" data-toggle="popover" data-trigger="hover" data-placement="top" data-container="body" data-content="Çoklu Rezervasyon Yap" type="button" class="btn btn-dark"><i class="fas fa-project-diagram"></i></a>
                                 </div>
 
                             </div>
@@ -505,14 +505,19 @@
 
 
                 <div style="background-color:#d39e000f" class="callout callout-warning row">
+
                     <div class="col-md-9"><h5 id="nickAndFullName"></h5></div>
+
 
                     <div style="margin-right:15px" id="cancelRes">
                         <button color:white" class="btn btn-danger" type="button" onclick="cancelResProcedureModal(this.id)">İptal Et</button>
                     </div>
+
+
                     <div id="updateRes">
                         <button style="background-color:#004e6c;" color:white" class="btn btn-primary" type="button" onclick="openUpdateResModal(this.id)">Düzenle</button>
                     </div>
+
                 </div>
 
 
@@ -605,7 +610,7 @@
             </div>
 
             <div class="modal-header">
-                <div class="row">
+                <div class="row d-flex justify-content-between">
 
                     <div id="selCourt" class="col-lg-6">
 
@@ -727,7 +732,7 @@
                 <div class="modal-footer d-flex justify-content-between" id="forApproveId">
                     <div>
                         <table class="table table-bordered ">
-                           
+
                             <tbody>
 
                                 <tr>
@@ -746,12 +751,12 @@
 
                         </table>
                     </div>
-                  
+
                     <div>
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Kapat</button>
                         <button type="button" class="btn btn-primary" onclick="Approve(this.id)">Rezervasyon Yap</button>
                     </div>
-                    
+
                 </div>
 
             </div>
@@ -786,7 +791,6 @@
                     <div id="selTime" class="col-md-6">
                         <nav aria-label="Page navigation example">
                             <ul class="pagination">
-
                                 <li class="page-item"><a style="color:white;  background-color:#3fc9d5 !important" class="page-link" href="~/AdminHome/Index?date=@today">Bugün</a></li>
                                 <li class="page-item"><a style="color:white; background-color:#337ab7" class="page-link" href="~/AdminHome/Index?date=@tomorrow">Yarın</a></li>
                                 <li class="page-item"><input class="form-control" type="date" id="timeNowUpdModal" style="cursor:pointer; background-color:#e7505a; color:white"></li>
@@ -993,7 +997,7 @@
 
 <script>
 
-    
+
 
     $(document).ready(function () {
 
@@ -1147,8 +1151,6 @@
             async: true,
             success: function (res) {
 
-                debugger;
-
                 var mem = [];
 
                 for (var i = 0; i < res.memberLists.length; i++) {
@@ -1156,16 +1158,22 @@
                 }
 
 
-                for (var i = 0; i < res.performanceTypes.length; i++) {
-                    mem.push(res.performanceTypes[i].performanceCode + ' - ' + res.performanceTypes[i].performanceTypes);
+                for (var i = 0; i < res.courtScales.length; i++) {
+
+
+
+                    var checkRole = Enumerable.from(res.memberLists)
+                        .where(function (x) { return x.role.toLowerCase() == res.courtScales[i].name.toLowerCase() })
+                        .select(function (x) { return x }).toArray();
+
+                    if (checkRole.length == 0) {
+                        mem.push(res.courtScales[i].code + ' - ' + res.courtScales[i].name);
+                    }
+
+
                 }
 
 
-                for (var i = 0; i < res.schoolTypes.length; i++) {
-                    mem.push(res.schoolTypes[i].code + ' - ' + res.schoolTypes[i].types);
-                }
-
-           
                 $("#findMember").autocomplete({
                     source: mem
                 });
@@ -1235,7 +1243,6 @@
 
                         if (res.reservations[a].court.courtId == res.courts[i].courtId) {
 
-                            debugger;
 
                             NewRow += '<li style="padding: 0.1rem 1.25rem;" class="list-group-item">';
 
@@ -1284,7 +1291,8 @@
 
     function nextDate() {
 
-        debugger;
+
+
 
         var date = $("#timeNow").val();
 
@@ -1612,7 +1620,6 @@
 
     function getCourtTimeUpd(courtId, courtName, timePickerModal, resId) {
 
-        debugger;
 
         $("#forApproveUpdId button:nth-of-type(2)").attr("id", resId);
 
@@ -1858,7 +1865,7 @@
                                 .select(function (x) { return x }).toArray();
 
 
-                          
+
 
 
                             var asd = res.courts[i].courtTimePeriod;
@@ -1893,13 +1900,6 @@
                             if (Res.length != 0 && resCancel.length != 0 && Res[0].userId == Res[0].doResUserId) {
 
 
-                                var scaleList = Enumerable.from(res.courtScaleLists)
-                                    .where(function (x) { return x.code == Res[0].nickName })
-                                    .select(function (x) { return x }).toArray();
-
-
-
-                                if (scaleList.length == 0) {
 
                                     var memInf = Enumerable.from(res.memberLists)
 
@@ -1911,7 +1911,9 @@
                                         .where(function (x) { return x.name.toLowerCase() == memInf[0].role.toLowerCase() })
                                         .select(function (x) { return x }).toArray();
 
-                                }
+                                
+
+
 
                                 if (scaleList.length > 0) {
                                     row += '<td borderRes="' + Res[0].resStartTime + ',' + period + '" data-toggle="popover" data-html="true" data-trigger="hover" data-placement="top" data-container="body" data-original-title="' + Res[0].nickName + ' | ' + mem[0] + '" ' + 'data-content="' + '<span style=' + 'color:#e61a1a' + '></span><br />' + Res[0].resStartTime + '-' + Res[0].resFinishTime + ' <br />' + Res[0].court.courtName + ' <br />' + Res[0].resDate + Res[0].resTime + '" onclick="openResInfModal(this.id)" id=" ' + Res[0].resId + '"  ' + 'colspan="' + colspanVal + '" style="text-align:center; vertical-align:middle; cursor:pointer; background-color:' + scaleList[0].color + '!important; color:#ffffff!important; border - right: 1px solid #dee2e6; ">';
@@ -1922,7 +1924,7 @@
                                     row += '<div style="background-color:' + scaleList2[0].color + '!important; color:#ffffff!important; ">';
                                 }
 
-                            
+
                                 row += '<a style="padding:0;color:#fff;">';
                                 row += Res[0].nickName;
                                 row += '</a>';
@@ -1936,7 +1938,6 @@
 
                                 a = a + parseInt(colspanVal) - 1;
                             }
-
 
                             else if (Res.length != 0 && resCancel.length != 0) {
 
@@ -1961,7 +1962,7 @@
                                 }
 
                                 if (scaleList.length > 0) {
-                                    row += '<td borderRes="' + Res[0].resStartTime + ',' + period + '" data-toggle="popover" data-html="true" data-trigger="hover" data-placement="top" data-container="body" data-original-title="' + Res[0].nickName + ' | ' + mem[0] + '" ' + 'data-content="' + '<span style=' + 'color:#e61a1a' + '></span><br />' + Res[0].resStartTime + '-' + Res[0].resFinishTime + ' <br />' + Res[0].court.courtName + ' <br />' + Res[0].resDate + Res[0].resTime + '" onclick="openResInfModal(this.id)" id=" ' + Res[0].resId + '"  ' + 'colspan="' + colspanVal + '" style="text-align:center; vertical-align:middle; cursor:pointer; background-color:' + scaleList[0].color + '!important; color:#ffffff!important; border - right: 1px solid #dee2e6; ">';
+                                    row += '<td borderRes="' + Res[0].resStartTime + ',' + period + '" data-toggle="popover" data-html="true" data-trigger="hover" data-placement="top" data-container="body" data-original-title="' + Res[0].nickName + ' | ' + scaleList[0].name + '" ' + 'data-content="' + '<span style=' + 'color:#e61a1a' + '></span><br />' + Res[0].resStartTime + '-' + Res[0].resFinishTime + ' <br />' + Res[0].court.courtName + ' <br />' + Res[0].resDate + Res[0].resTime + '" onclick="openResInfModal(this.id)" id=" ' + Res[0].resId + '"  ' + 'colspan="' + colspanVal + '" style="text-align:center; vertical-align:middle; cursor:pointer; background-color:' + scaleList[0].color + '!important; color:#ffffff!important; border - right: 1px solid #dee2e6; ">';
                                     row += '<div style="background-color:' + scaleList[0].color + '!important; color:#ffffff!important; ">';
                                 }
                                 else {
@@ -1969,7 +1970,7 @@
                                     row += '<div style="background-color:' + scaleList2[0].color + '!important; color:#ffffff!important; ">';
                                 }
 
-                         
+
                                 row += '<a style="padding:0;color:#fff;">';
                                 row += Res[0].nickName;
                                 row += '</a>';
@@ -1982,25 +1983,20 @@
 
                             else if (Res.length != 0 && Res[0].userId == Res[0].doResUserId) {
 
-                                var scaleList = Enumerable.from(res.courtScaleLists)
-                                    .where(function (x) { return x.code == Res[0].nickName })
+
+
+
+                                var memInf = Enumerable.from(res.memberLists)
+
+                                    .where(function (x) { return x.nickName == Res[0].nickName })
+                                    .select(function (x) { return x }).toArray();
+
+                                var scaleList2 = Enumerable.from(res.courtScaleLists)
+
+                                    .where(function (x) { return x.name.toLowerCase() == memInf[0].role.toLowerCase() })
                                     .select(function (x) { return x }).toArray();
 
 
-
-                                if (scaleList.length == 0) {
-
-                                    var memInf = Enumerable.from(res.memberLists)
-
-                                        .where(function (x) { return x.nickName == Res[0].nickName })
-                                        .select(function (x) { return x }).toArray();
-
-                                    var scaleList2 = Enumerable.from(res.courtScaleLists)
-
-                                        .where(function (x) { return x.name.toLowerCase() == memInf[0].role.toLowerCase() })
-                                        .select(function (x) { return x }).toArray();
-
-                                }
 
                                 if (scaleList.length > 0) {
                                     row += '<td borderRes="' + Res[0].resStartTime + ',' + period + '" data-toggle="popover" data-html="true" data-trigger="hover" data-placement="top" data-container="body" data-original-title="' + Res[0].nickName + ' | ' + mem[0] + '" ' + 'data-content="' + '<span style=' + 'color:#e61a1a' + '></span><br />' + Res[0].resStartTime + '-' + Res[0].resFinishTime + ' <br />' + Res[0].court.courtName + ' <br />' + Res[0].resDate + Res[0].resTime + '" onclick="openResInfModal(this.id)" id=" ' + Res[0].resId + '"  ' + 'colspan="' + colspanVal + '" style="text-align:center; vertical-align:middle; cursor:pointer; background-color:' + scaleList[0].color + '!important; color:#ffffff!important; border - right: 1px solid #dee2e6; ">';
@@ -2029,9 +2025,9 @@
                                     .where(function (x) { return x.code == Res[0].nickName })
                                     .select(function (x) { return x }).toArray();
 
+                               
 
-
-                                if (scaleList.length == 0 ) {
+                                if (scaleList.length == 0) {
 
                                     var memInf = Enumerable.from(res.memberLists)
 
@@ -2045,17 +2041,17 @@
 
                                 }
 
-                                debugger;
+
 
                                 if (scaleList.length > 0) {
-                                    row += '<td borderRes="' + Res[0].resStartTime + ',' + period + '" data-toggle="popover" data-html="true" data-trigger="hover" data-placement="top" data-container="body" data-original-title="' + Res[0].nickName + ' | ' + mem[0] + '" ' + 'data-content="' + '<span style=' + 'color:#e61a1a' + '></span><br />' + Res[0].resStartTime + '-' + Res[0].resFinishTime + ' <br />' + Res[0].court.courtName + ' <br />' + Res[0].resDate + Res[0].resTime + '" onclick="openResInfModal(this.id)" id=" ' + Res[0].resId + '"  ' + 'colspan="' + colspanVal + '" style="text-align:center; vertical-align:middle; cursor:pointer; background-color:' + scaleList[0].color + '!important; color:#ffffff!important; border - right: 1px solid #dee2e6; ">';
+                                    row += '<td borderRes="' + Res[0].resStartTime + ',' + period + '" data-toggle="popover" data-html="true" data-trigger="hover" data-placement="top" data-container="body" data-original-title="' + Res[0].nickName + ' | ' + scaleList[0].name + '" ' + 'data-content="' + '<span style=' + 'color:#e61a1a' + '></span><br />' + Res[0].resStartTime + '-' + Res[0].resFinishTime + ' <br />' + Res[0].court.courtName + ' <br />' + Res[0].resDate + Res[0].resTime + '" onclick="openResInfModal(this.id)" id=" ' + Res[0].resId + '"  ' + 'colspan="' + colspanVal + '" style="text-align:center; vertical-align:middle; cursor:pointer; background-color:' + scaleList[0].color + '!important; color:#ffffff!important; border - right: 1px solid #dee2e6; ">';
                                     row += '<div style="background-color:' + scaleList[0].color + '!important; color:#ffffff!important; ">';
                                 }
                                 else {
                                     row += '<td borderRes="' + Res[0].resStartTime + ',' + period + '" data-toggle="popover" data-html="true" data-trigger="hover" data-placement="top" data-container="body" data-original-title="' + Res[0].nickName + ' | ' + mem[0] + '" ' + 'data-content="' + '<span style=' + 'color:#e61a1a' + '></span><br />' + Res[0].resStartTime + '-' + Res[0].resFinishTime + ' <br />' + Res[0].court.courtName + ' <br />' + Res[0].resDate + Res[0].resTime + '" onclick="openResInfModal(this.id)" id=" ' + Res[0].resId + '"  ' + 'colspan="' + colspanVal + '" style="text-align:center; vertical-align:middle; cursor:pointer; background-color:' + scaleList2[0].color + '!important;color:#ffffff!important;  border-right: 1px solid #dee2e6; ">';
                                     row += '<div style="background-color:' + scaleList2[0].color + '!important; color:#ffffff!important; ">';
                                 }
-                          
+
                                 row += '<a style="padding:0;color:#fff;">';
                                 row += Res[0].nickName;
                                 row += '</a>';
@@ -2214,7 +2210,6 @@
 
     function getPrice() {
 
-        debugger;
 
         var price = [];
         $('#checkPriceTables input:checked').each(function () {
@@ -2237,7 +2232,6 @@
 
     function Approve(id) {
 
-        debugger;
 
 
         // seçilen saatler
@@ -2283,7 +2277,7 @@
 
             userName = memberUserName[0];
         }
-   
+
         var resobject = {
 
             ResDate: '',
@@ -2374,7 +2368,7 @@
                                 text: "Rezervasyon Kaydınız Başarılı Bir Şekilde Gerçekleşti !",
                                 icon: "success",
                                 button: "Tamam",
-                                timer:500,
+                                timer: 500,
                             }).then((value) => {
 
                                 getResTable($("#timeNow").val());
@@ -2507,6 +2501,8 @@
                 }
 
                 if (res != null) {
+
+                    debugger;
 
                     $("#nickAndFullName").text(res.resSchemaModal.nickName + ' - ' + res.resSchemaModal.fullName);
                     $("#courtName").text('Kort Adı:' + ' ' + res.resSchemaModal.courtName);
